tests/compile-fail/reserved/try_match_empty.rs
fn main() {
    let _ = try_match::try_match!();
}
